@@ -4,7 +4,7 @@
       "Tim Bunce <timb@cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -52,5 +52,5 @@
       ],
       "x_MailingList" : "http://groups.google.com/group/develnytprof-dev"
    },
-   "version" : "5.00"
+   "version" : "5.01"
 }
